infrastructure/k8s/apps/lofibooks/overlays/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lofibooks
  labels:
    app.kubernetes.io/part-of: lofibooks
    environment: prod
